--- a/statics/scss/page/_info.scss
+++ b/statics/scss/page/_info.scss
@@ -142,3 +142,600 @@
     }
   }
 }
+.leadership_page {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  min-height: 500px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-flow: row;
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: linear-gradient(to left, transparent, rgba(0, 85, 46, 1));
+    z-index: 1;
+  }
+
+  .bg-fill {
+    background-position: 50% 50%;
+  }
+
+  .info_about_desc {
+    z-index: 1;
+  }
+}
+.leadership_info {
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  .row {
+    margin: 0;
+  }
+}
+
+.text_title_head {
+  h1 {
+    font-weight: bold;
+    font-family: "Roboto", sans-serif;
+    background-image: linear-gradient(to right, #64aa20, #286311);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 30px;
+    margin-bottom: 0;
+    text-transform: uppercase;
+    @media screen and (max-width: 767px) { 
+      font-size: 25px;
+    }
+  }
+
+  margin-bottom: 20px;
+}
+
+.leadership_info_content {
+  @media screen and (max-width: 767px) { 
+    margin-top: 30px;
+  }
+  .title {
+    color: #eac257;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 1.3;
+    margin-bottom: 12px;
+  }
+
+  .subtitle {
+    color: #008749;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 1.3;
+    margin-bottom: 12px;
+  }
+
+  p {
+    margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 1.6;
+  }
+}
+
+.leadership_item {
+  .img {
+    width: 150px !important;
+    height: 150px;
+    border: 4px solid #eac257;
+    border-radius: 50%;
+    margin: 0 auto 24px;
+  }
+
+  img {
+    padding: 35px;
+    margin: auto;
+    display: block;
+  }
+
+  .text {
+    h4 {
+      font-size: 18px;
+      color: #555;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+  }
+
+  text-align: center;
+}
+
+.leadership_list {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  .col {
+    @media (min-width: 992px){
+      max-width: 20%;
+      flex: 0 0 20%;
+    }
+   
+  }
+  .row{
+    @media screen and (max-width: 767px) { 
+      justify-content: center;
+    }
+
+  }
+}
+
+.leadership_list_item {
+  .img {
+    height: 201px;
+    position: relative;
+    overflow: hidden;
+    img {
+      margin: 0 auto;
+      display: block;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 2px solid #DDAC17;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .text {
+    h4 {
+      color: #00552e;
+      font-size: 18px;
+      line-height: 1.6;
+      font-weight: 700;
+      margin-bottom: 5px;
+    }
+
+    p {
+      color: #eac257;
+      font-size: 14px;
+      line-height: 1;
+    }
+
+    padding: 10px 0 20px;
+    text-align: center;
+  }
+}
+.infrastructure_bg {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  min-height: 500px;
+  display: flex;
+  position: relative;
+  flex-flow: row;
+  align-items: center;
+
+  &:before {
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-image: linear-gradient(to left, transparent, rgba(0, 85, 46, 1));
+    z-index: 1;
+  }
+
+  .info_about_desc {
+    z-index: 1;
+  }
+}
+.equipments {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  position: relative;
+}
+.equipments_tile {
+  margin-bottom: 30px;
+  h1,h2 {
+    font-weight: bold;
+    font-family: "Roboto", sans-serif;
+    background-image: linear-gradient(to right, #64aa20, #286311);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 30px;
+    margin-bottom: 0;
+    line-height: 1.6;
+    @media screen and (max-width: 767px) { 
+      font-size: 25px;
+    }
+  }
+}
+
+.equipments {
+  .equipments_col {
+    position: absolute;
+    right: 0;
+    @media screen and (max-width: 767px) { 
+      position: relative;
+      margin-bottom: 30px;
+    }
+    .img {
+      img {
+        border: 2px solid #DDAC17;
+        border-radius: 50%;
+      }
+
+    }
+  }
+
+  .row {
+    position: relative;
+  }
+}
+
+.equipments_text {
+  h3 {
+    font-weight: 700;
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 10px;
+  }
+
+  p {
+    margin-bottom: 20px;
+  }
+
+  ul {
+    margin-bottom: 20px;
+    padding-left: 20px;
+
+    li {
+      list-style: disc;
+      margin-bottom: 10px;
+    }
+  }
+}
+
+.comfor_facilities {
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  .img {
+    margin-bottom: 30px;
+  }
+}
+.five_elements_page {
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  .title_bg_main {
+    padding-bottom: 40px;
+  }
+
+  .text {
+    p {
+      margin-bottom: 20px;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+
+    ul {
+      margin-bottom: 20px;
+      font-size: 16px;
+      line-height: 1.6;
+      padding-left: 20px;
+
+      li {
+        margin-bottom: 10px;
+        list-style: disc;
+      }
+    }
+  }
+}
+
+.section_content {
+  padding: 30px 0;
+
+  .tille h2 {
+    background-color: #008c39;
+    padding: 10px;
+    color: #fff;
+    line-height: 1.3;
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 0;
+    @media screen and (max-width: 767px) { 
+      font-size: 19px;
+    }
+  }
+
+  .text {
+    margin-top: 30px;
+
+    h3 {
+      font-size: 18px;
+      color: #00552e;
+      font-weight: bold;
+      text-transform: uppercase;
+      margin-bottom: 30px;
+      margin-top: 0;
+    }
+  }
+}
+
+.title_sologan {
+  width: 80%;
+  position: relative;
+  font-style: italic;
+  margin-bottom: 20px;
+  @media screen and (max-width: 767px) { 
+    width: 100%;
+  }
+  &::after {
+    content: '';
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    top: -15px;
+    left: 0;
+    background: url(../img/quote-1.png) 0 0 / 100% no-repeat;
+  }
+
+  &::before {
+    content: '';
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    background: url(../img/quote-2.png) 0 0 / 100% no-repeat;
+  }
+}
+
+.section_content {
+  .text p {
+    font-size: 16px;
+  }
+
+  .tille {
+    background-color: #008c39;
+  }
+}
+
+.section_mission_bg {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #f7f7f7;
+
+  .text {
+    @media screen and (max-width: 767px) { 
+     margin-top: 30px;
+    }
+    h3 {
+      font-size: 18px;
+      color: #00552e;
+      font-weight: bold;
+      text-transform: uppercase;
+      margin-bottom: 30px;
+    }
+  }
+}
+.section_core_values_bg {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  .img{
+    will-change: filter, transform, opacity;
+    -webkit-backface-visibility: hidden;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+    opacity: 0 !important;
+    -webkit-transition: opacity .7s ease-in, -webkit-filter 1.3s, -webkit-transform 1.6s;
+    transition: opacity .7s ease-in, -webkit-filter 1.3s, -webkit-transform 1.6s;
+    -o-transition: filter 1.3s, transform 1.6s, opacity .7s ease-in;
+    transition: filter 1.3s, transform 1.6s, opacity .7s ease-in;
+    transition: filter 1.3s, transform 1.6s, opacity .7s ease-in, -webkit-filter 1.3s, -webkit-transform 1.6s;
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+    -webkit-transition-delay: .2s;
+    -o-transition-delay: .2s;
+    transition-delay: .2s;
+    overflow: hidden;
+  }
+  .slick-slide{
+    overflow: hidden;
+  }
+  .slick-active{
+    .img{
+      -webkit-animation-delay: .1s;
+      animation-delay: .1s;
+      -webkit-transform: translate3d(0, 0, 0) scale(1);
+      transform: translate3d(0, 0, 0) scale(1);
+      opacity: 1 !important;
+    }
+  }
+  .text {
+    h3 {
+      font-size: 18px;
+      color: #00552e;
+      font-weight: bold;
+      text-transform: uppercase;
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
+    p {
+      margin-bottom: 20px;
+      font-size: 15px;
+      color: #555;
+      width: 100%;
+    }
+  }
+
+  .slick-arrow {
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    width: 36px;
+    border: none;
+    cursor: pointer;
+    opacity: 1;
+    -webkit-transition: opacity .3s, background .3s, -webkit-transform .3s, -webkit-box-shadow .3s;
+    transition: opacity .3s, background .3s, -webkit-transform .3s, -webkit-box-shadow .3s;
+    -o-transition: transform .3s, opacity .3s, background .3s, box-shadow .3s;
+    transition: transform .3s, opacity .3s, background .3s, box-shadow .3s;
+    transition: transform .3s, opacity .3s, background .3s, box-shadow .3s, -webkit-transform .3s, -webkit-box-shadow .3s;
+    top: 0;
+    bottom: 100%;
+    background-color: #eac257;
+    border-color: #eac257;
+    color: #fff;
+    height: 36px;
+    border-radius: 100%;
+    font-size: 0;
+    &::after{
+      font-family: "Font Awesome 6 Pro";
+      font-style: normal;
+      font-size: 16px;
+    }
+  }
+
+  .slick-prev {
+    left: 37%;
+    transform: translateX(50%) !important;
+    @media screen and (max-width: 767px) { 
+      left: 75%;
+     }
+    &::after{
+      content: "\f053";
+    }
+  }
+
+  .slick-next {
+    left: 45%;
+    transform: translateX(-50%) !important;
+    @media screen and (max-width: 767px) { 
+      left: 95%;
+     }
+    &::after{
+      content: "\f054";
+    }
+  }
+}
+.conmit_page {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  position: relative;
+  padding: 30px 0;
+  color: #f1f1f1;
+
+  h2 {
+    background-image: linear-gradient(to right, #FFFA8A, #DDAC17);
+    -webkit-background-clip: text;
+  }
+
+  .row > .col-xl-3 {
+    border-right: 1px solid #FFFFFF;
+
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+  .box {
+    .box_content_title {
+      font-size: 23px;
+      margin-bottom: 15px;
+      min-height: 72px;
+      position: relative;
+      z-index: 1;
+    }
+
+    .text_overlay_gold {
+      color: #eac257;
+      opacity: 0.4;
+      font-weight: bold;
+      position: absolute;
+      text-transform: uppercase;
+      width: 100%;
+      margin: 0;
+      font-size: 75px;
+      top: -40px;
+      left: -10px;
+      transform: unset;
+      line-height: 1.6;
+    }
+
+    .box_content_description {
+      text-align: justify;
+      min-height: 200px;
+      font-size: 16px;
+      line-height: 1.6;
+    }
+
+    position: relative;
+  }
+}
+.target_page {
+  padding-top: 0;
+  padding-bottom: 30px;
+  position: relative;
+
+  .title_bg_main {
+    h2 {
+      background-image: linear-gradient(to right, #64aa20, #286311);
+      display: inline;
+    }
+
+    img {
+      display: block;
+      margin: 30px auto 30px;
+    }
+
+    text-align: center;
+  }
+  .tille {
+    background-color: #008c39;
+    padding: 10px;
+    margin-bottom: 30px;
+
+    h2 {
+      color: #fff;
+      line-height: 1.3;
+      font-weight: 700;
+      font-size: 24px;
+      margin-bottom: 0;
+      @media screen and (max-width: 767px) { 
+        font-size: 19px;
+      }
+    }
+
+    p {
+      color: #fff;
+    }
+  }
+
+  .content .item {
+    margin-bottom: 30px;
+
+    h2 {
+      color: #035730;
+      font-size: 25px;
+      font-weight: 700;
+      line-height: 1.3;
+      margin-bottom: 12px;
+      
+    }
+
+    p {
+      color: #555;
+    }
+  }
+}
