--- a/statics/scss/style.scss
+++ b/statics/scss/style.scss
@@ -15,5 +15,6 @@
 @import "page/project";
 @import "page/green";
 @import "page/studio";
+@import "page/pagination";
 @import "page/reponsive";
 @import "layout/footer";
